Fix wishlist spacing

--- a/_sass/layouts/_wishlist.scss
+++ b/_sass/layouts/_wishlist.scss
@@ -89,7 +89,7 @@ body#wishlist {
         position: relative;
         width: 100%;
 
-        margin: $container-padding * 3 0 0 0;
+        margin: $container-padding * 3 0 $container-padding;
         padding: $container-padding;
 
         text-align: center;
